sdk-docs_versioned_docs/version-19.0.0/enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md
---
id: "PolymeshContractsTx"
title: "Enumeration: PolymeshContractsTx"
sidebar_label: "PolymeshContractsTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).PolymeshContractsTx

## Enumeration Members

### Call

• **Call** = ``"polymeshContracts.call"``

#### Defined in

[generated/types.ts:705](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L705)

___

### Instantiate

• **Instantiate** = ``"polymeshContracts.instantiate"``

#### Defined in

[generated/types.ts:707](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L707)

___

### InstantiateWithCode

• **InstantiateWithCode** = ``"polymeshContracts.instantiateWithCode"``

#### Defined in

[generated/types.ts:706](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L706)

___

### InstantiateWithCodePerms

• **InstantiateWithCodePerms** = ``"polymeshContracts.instantiateWithCodePerms"``

#### Defined in

[generated/types.ts:710](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L710)

___

### InstantiateWithHashPerms

• **InstantiateWithHashPerms** = ``"polymeshContracts.instantiateWithHashPerms"``

#### Defined in

[generated/types.ts:711](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L711)

___

### RemoveCode

• **RemoveCode** = ``"polymeshContracts.removeCode"``

#### Defined in

[generated/types.ts:709](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L709)

___

### UpdateCallRuntimeWhitelist

• **UpdateCallRuntimeWhitelist** = ``"polymeshContracts.updateCallRuntimeWhitelist"``

#### Defined in

[generated/types.ts:712](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L712)

___

### UploadCode

• **UploadCode** = ``"polymeshContracts.uploadCode"``

#### Defined in

[generated/types.ts:708](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L708)
