sdk-docs_versioned_docs/version-23.0.x/enums/Generated/Types/PolymeshContractsTx/PolymeshContractsTx.md
---
id: "PolymeshContractsTx"
title: "Enumeration: PolymeshContractsTx"
sidebar_label: "PolymeshContractsTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).PolymeshContractsTx

## Enumeration Members

### Call

• **Call** = ``"polymeshContracts.call"``

#### Defined in

[generated/types.ts:748](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L748)

___

### Instantiate

• **Instantiate** = ``"polymeshContracts.instantiate"``

#### Defined in

[generated/types.ts:750](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L750)

___

### InstantiateWithCode

• **InstantiateWithCode** = ``"polymeshContracts.instantiateWithCode"``

#### Defined in

[generated/types.ts:749](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L749)

___

### InstantiateWithCodeAsPrimaryKey

• **InstantiateWithCodeAsPrimaryKey** = ``"polymeshContracts.instantiateWithCodeAsPrimaryKey"``

#### Defined in

[generated/types.ts:756](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L756)

___

### InstantiateWithCodePerms

• **InstantiateWithCodePerms** = ``"polymeshContracts.instantiateWithCodePerms"``

#### Defined in

[generated/types.ts:753](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L753)

___

### InstantiateWithHashAsPrimaryKey

• **InstantiateWithHashAsPrimaryKey** = ``"polymeshContracts.instantiateWithHashAsPrimaryKey"``

#### Defined in

[generated/types.ts:757](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L757)

___

### InstantiateWithHashPerms

• **InstantiateWithHashPerms** = ``"polymeshContracts.instantiateWithHashPerms"``

#### Defined in

[generated/types.ts:754](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L754)

___

### RemoveCode

• **RemoveCode** = ``"polymeshContracts.removeCode"``

#### Defined in

[generated/types.ts:752](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L752)

___

### UpdateCallRuntimeWhitelist

• **UpdateCallRuntimeWhitelist** = ``"polymeshContracts.updateCallRuntimeWhitelist"``

#### Defined in

[generated/types.ts:755](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L755)

___

### UpgradeApi

• **UpgradeApi** = ``"polymeshContracts.upgradeApi"``

#### Defined in

[generated/types.ts:758](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L758)

___

### UploadCode

• **UploadCode** = ``"polymeshContracts.uploadCode"``

#### Defined in

[generated/types.ts:751](https://github.com/PolymeshAssociation/polymesh-sdk/blob/720afb69c/src/generated/types.ts#L751)
